# LabelStudioYOLOv8Converter

./: .gitignore  converter.py  pyproject.toml
